# roller485

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  __main__.py  main.py  pyproject.toml  roller485.ksy  setup.py  unit_roller485.ksy  util.py
Roller485/: unit_roller485.ksy  unit_roller485_protocol.py
git-hooks/: pre-commit
protocol/: unit_roller485_protocol.py
roller485/: __main__.py  cli.py  roller485_protocol.py  util.py
tests/: conftest.py  hello-motor.py  test_cli.py  test_crc.py  test_protocol.py  test_util.py
