[project]
name = "demo-roller485"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kaitaistruct>=0.11",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
roller485 = "roller485.cli:main"
